<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/fragment_form_btnStart"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/shape_button_next"
        android:text="@string/form_button_start"
        android:textColor="@color/white"
        android:textSize="@dimen/large_textSize_dp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_form_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_effect_clicked"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/fragment_form_btnStart"
        app:layout_constraintEnd_toEndOf="@+id/fragment_form_btnStart"
        app:layout_constraintStart_toStartOf="@+id/fragment_form_btnStart"
        app:srcCompat="@drawable/shape_circle" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/doctor" />

    <TextView
        android:id="@+id/fragment_form_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/form_text_description"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/normal_textSize_sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>