<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="ltr"
    android:layout_height="wrap_content"
    tools:targetApi="jelly_bean_mr1">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_login_InputLayout_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:gravity="start"
            android:textSize="@dimen/large_textSize_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fragment_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usernameEditText"
                android:textSize="@dimen/large_textSize_dp"
                android:paddingRight="@dimen/standard_margin_2x"
                android:gravity="start|center_vertical"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_login_InputLayout_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:gravity="start"
            android:textSize="@dimen/large_textSize_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_login_InputLayout_username">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/fragment_login_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/passwordEditText"
                android:inputType="textPassword"
                android:textSize="@dimen/large_textSize_dp"
                android:paddingRight="@dimen/standard_margin_2x"
                android:gravity="start|center_vertical"
                android:maxLines="1"


 />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/fragment_login_forgetPassword_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/login_text_forgetPassword"
            android:textColor="@color/dark_gray_text"
            android:textSize="@dimen/normal_textSize_sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_login_processButton" />


        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/fragment_login_processButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/UserLogin"
            android:textColor="@color/white"

            android:textSize="@dimen/large_textSize_dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_login_InputLayout_password"
            custom:pb_colorNormal="@color/colorPrimaryDark"
            custom:pb_colorPressed="@color/colorPrimary"

            />

    </android.support.constraint.ConstraintLayout>


</ScrollView>