<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ss.com.bannerslider.Slider
        android:id="@+id/banner_category_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:slider_interval="3000"
        app:slider_loopSlides="true"
        app:slider_defaultBanner="6"
        app:chainUseRtl="true"
        app:slider_animateIndicators="true"
        tools:src="@drawable/banner_holder" />

    <ImageView
        android:id="@+id/banner_category_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:srcCompat="@drawable/ic_list_black_24dp" />

    <TextView
        android:id="@+id/banner_category_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:text="@string/main_menuList"
        android:textSize="@dimen/normal_textSize_sp"
        app:layout_constraintBottom_toBottomOf="@+id/banner_category_list"
        app:layout_constraintRight_toLeftOf="@+id/banner_category_list"
        app:layout_constraintTop_toTopOf="@+id/banner_category_list" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        style="@style/cardViewQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="@dimen/cardCornerRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner_category_image">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/standard_margin">

            <TextView
                android:id="@+id/banner_main_news_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/standard_margin"
                android:layout_toLeftOf="@id/banner_main_news_img"
                android:text="@string/main_status"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/normal_textSize_sp" />

            <ImageView
                android:id="@+id/banner_main_news_img"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_sun" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>