<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:layoutDirection="ltr">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_register_first_name_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:textSize="@dimen/large_textSize_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fragment_register_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="@dimen/large_textSize_dp"
                android:paddingRight="@dimen/standard_margin"
                android:paddingLeft="@dimen/standard_margin"
                android:hint="@string/registerUser_firstName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_register_last_name_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="8dp"
            android:gravity="start"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_register_first_name_layout"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fragment_register_first_name_layout"
            app:layout_constraintVertical_bias="1.0">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fragment_register_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="@dimen/large_textSize_dp"
                android:paddingRight="@dimen/standard_margin"
                android:paddingLeft="@dimen/standard_margin"
                android:hint="@string/registerUser_lastName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_register_email_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:textSize="@dimen/large_textSize_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_register_first_name_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fragment_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/registerUser_email"
                android:paddingLeft="@dimen/standard_margin"
                android:paddingRight="@dimen/standard_margin"
                android:textSize="@dimen/large_textSize_dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_register_username_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:textSize="@dimen/large_textSize_dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="start"
            app:layout_constraintTop_toBottomOf="@+id/fragment_register_email_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fragment_register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="@dimen/large_textSize_dp"
                android:paddingRight="@dimen/standard_margin"
                android:paddingLeft="@dimen/standard_margin"
                android:hint="@string/registerUser_username" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_register_password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/large_textSize_dp"
            android:gravity="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_register_username_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fragment_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="@dimen/large_textSize_dp"
                android:paddingRight="@dimen/standard_margin"
                android:paddingLeft="@dimen/standard_margin"
                android:hint="@string/registerUser_password" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/fragment_register_sendButton"
            android:layout_width="250dp"
            android:layout_height="38dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/shape_button_next"
            android:text="@string/UserRegister"
            android:textColor="@color/white"
            android:textSize="@dimen/large_textSize_dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_register_password_layout" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="205dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="395dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

    </android.support.constraint.ConstraintLayout>



</ScrollView>